Close #20 Clean up portfolio detail page - Fix buggy behavior with play button - Tighten up alignment - Clean up post footer nav

--- a/scss/_page.scss
+++ b/scss/_page.scss
@@ -88,6 +88,13 @@
 			margin: 0;
 			padding: 0 1.5em;
 		}
+		
+		.post-navigation{
+			padding: 0 1.5em;
+			a{
+				text-decoration: none;
+			}
+		}
 	}
 
 	#secondary{
