--- a/scss/_sidebar.scss
+++ b/scss/_sidebar.scss
@@ -35,6 +35,8 @@ aside{
 
 		*[class^="fa"]{
 			width: 2em;
+			text-align: center;
+			margin-right: 0.5em;
 		}
 		
 		*{
